manifests/service.yaml
---
# ---------- Exposer service ------------
apiVersion: v1
kind: Service
metadata:
  name: giropops-service
  namespace: girons
spec:
  selector:
    name: giropops
  ports:
  - name:  xp-port
    port:  8080
    targetPort:  8080

---
# ---------- Internal service ------------
apiVersion: v1
kind: Service
metadata:
  name: giropops-intra-service
  namespace: girons
spec:
  selector:
    name: giropops
  ports:
    - port: 5701
      name: hazelcast
    - port: 9300
      name: elasticsearch
  type: ClusterIP
  clusterIP: None
  publishNotReadyAddresses: true
