manifests/ingress.yaml
# ---------- Ingress entry ------------
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: giropops-ingress
  namespace: girons
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: 1000m
    nginx.ingress.kubernetes.io/affinity: "cookie"
spec:
  rules:
    - host: app.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: giropops-service
              servicePort: 8080
